# madsoft-test-task

./: .gitignore  README.md  docker-compose.yaml
minio/: minio.env
minio/data/.minio.sys/: format.json
minio/data/.minio.sys/tmp/.trash/055c12b0-9a91-4c8b-b901-15361f9d5c40/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/199d90a2-ff01-465e-ba5f-ce9140506682/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/1b16d9b3-85fd-4638-b886-d510f4133443/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/371f18d3-3ff9-4711-9c13-d05b1bd7779e/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/53ab06e8-d668-46b9-8d46-644aeeef36b5/: xl.meta.bkp
minio/data/memes-bucket/31meme-wordplay-superJumbo.png/261efc05-b261-4953-86ef-bda06791bf62/: part.1
postgres/: Dockerfile  postgresql.conf  update_config.sh
public_service/: Dockerfile  main.py  pyproject.toml  start.sh
public_service/src/: main.py
public_service/src/abstract/: abstract_application.py  abstract_controller.py  abstract_factory.py
public_service/src/application/: application.py  controller.py  factory.py
storage_service/: Dockerfile  pyproject.toml  start.sh  storage.env
storage_service/src/: alembic.ini  main.py
storage_service/src/abstract/: abstract_application.py  abstract_controller.py  abstract_factory.py  abstract_repository.py  abstract_s3.py  abstract_service.py
storage_service/src/application/: application.py  controller.py  factory.py  service.py  utils.py
storage_service/src/exceptions/: repository_exc.py  s3_exc.py
storage_service/src/migrations/: env.py
storage_service/src/migrations/versions/: 03177b39dfab_.py  728ad9e7dc28_.py
storage_service/src/schemas/: meme.py
storage_service/src/storage/: repository.py  s3.py
storage_service/src/storage/models/: annotated_types.py  meme.py
storage_service/tests/: conftest.py  test_storage_service.py
storage_service/tests/mock/: mock_repository.py  mock_s3.py
(+13 files in other folders)
