[tool.poetry]
name = "storage-service"
version = "0.1.0"
description = ""
authors = ["Arkhip McNutt <ortiz47@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
pydantic = "^2.8.2"
minio = "^7.2.7"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
